--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         filter: invert(1);
       }
     </style>
-    <h1>Non ce niente :I</h1>
+    <h1 style="font-size:10vw" >Non ce niente :I</h1>
   </head>
   <body>
 
