--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
   </head>
   <body>
-    <div style="font-size:10vw" >Non ce niente :I</div>
-    <div> Cippi nudo balla</div>
+    <div style="font-size:10vw" >
+      Non ce niente :I
+    </div>
+    <div style="font-size:7">
+      Cippi nudo balla
+      <img src="Cippi!.png" alt="Cippi">
+    </div>
 
   </body>
 </html>
