--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
     <div style="font-size:7">
       Cippi nudo balla
+
+    </div>
+    <div>
       <img src="Cippi!.png" alt="Cippi">
     </div>
 
