--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
+    <title>Cippi!</title>
     <style>
       body {
         background-color: rgb(44, 48, 53);
@@ -20,7 +21,7 @@
 
     </div>
     <div>
-      <img src="Cippi!.png" alt="Cippi">
+      <img src="Cippi!.png" title="Cippi" width="128" height="128">>
     </div>
 
   </body>
