--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
   <head>
     <title>Cippi!</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <style>
       body {
         background-color: rgb(44, 48, 53);
