--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </div>
     <div>
-      <img src="Cippi!.png" title="Cippi" width="128" height="128">>
+      <img src="Cippi!.png" title="Cippi" width="128" height="128">
     </div>
 
   </body>
