--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cippi!</title>
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <style>
-      body {
+      p {
         background-color: rgb(44, 48, 53);
         height: auto;
         width: auto;
@@ -15,10 +15,10 @@
   </head>
   <body>
     <div style="font-size:10vw" >
-      Non ce niente :I
+      <p>Non ce niente :I</p>
     </div>
     <div style="font-size:7">
-      Cippi nudo balla
+      <p>Cippi nudo balla</p>
 
     </div>
     <div>
