--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <title>Cippi!</title>
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <style>
-      p {
+      body {
         background-color: rgb(44, 48, 53);
         height: auto;
         width: auto;
         filter: invert(1);
       }
     </style>
+    <img src="Cippi!.png" title="Cippi" width="128" height="128">
 
   </head>
   <body>
     <div style="font-size:10vw" >
-      <p>Non ce niente :I</p>
+      Non ce niente :I
     </div>
     <div style="font-size:7">
-      <p>Cippi nudo balla</p>
+      Cippi nudo balla
 
     </div>
     <div>
-      <img src="Cippi!.png" title="Cippi" width="128" height="128">
+
     </div>
 
   </body>
