--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         filter: invert(1);
       }
     </style>
-    <img src="Cippi!.png" title="Cippi" width="128" height="128">
+
 
   </head>
   <body>
@@ -23,7 +23,7 @@
 
     </div>
     <div>
-
+      <img src="Cippi!.png" filter="invert(1);" title="Cippi" width="128" height="128">
     </div>
 
   </body>
