--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
         background-color: rgb(44, 48, 53);
         height: auto;
         width: auto;
-        filter: invert(1);
       }
     </style>
 
 
   </head>
   <body>
-    <div style="font-size:10vw" >
+    <div style="font-size:10vw" filter="invert(1);" >
       Non ce niente :I
     </div>
-    <div style="font-size:7">
+    <div style="font-size:7" filter="invert(1);" >
       Cippi nudo balla
 
     </div>
     <div>
-      <img src="Cippi!.png" filter="invert(1);" title="Cippi" width="128" height="128">
+      <img src="Cippi!.png"title="Cippi" width="128" height="128">
     </div>
 
   </body>
