--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </div>
 
     <div style="font-size:7" filter="invert(1);" >
-      Cippi nudo balla
+      Width Cippi
 
     </div>
 
     <div>
-      <img src="Cippi!.png"title="Cippi" width="128" height="128">
+      <img src="Cippi!.png"title="W I D T H" width="86" height="64">
 
     </div>
 
