--- a/info.html
+++ b/info.html
@@ -9,6 +9,7 @@
         background-color: rgb(44, 48, 53);
         height: auto;
         width: auto;
+        margin: auto;
       }
       footer {
         background-color: rgb(58, 68, 79);
