--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
       Width Cippi
 
     </div>
-
+      <p id="Output"></p>
     <div>
       <label for="fname">First name:</label><br>
       <input type="text" id="fname" name="fname" value="John"><br>
