--- a/Home.html
+++ b/Home.html
@@ -34,12 +34,12 @@
     </div>
       <p id="Output"></p>
     <div>
-      <label for="fname">First name:</label><br>
-      <input type="text" id="fname" name="fname" value="John"><br>
-      <input type="submit">
+      <input type="text" id="Commando" name="Commando" value="Commandi da inserire"><br>
+      <button type="button" name="Submit" onclick="type(document.getElementById(`Commando`).innerHTML)"></button>
     </div>
     <footer>
       <img class="d" src="discord-512.webp"title="Server Discord" width="48" height="48">
     </footer>
+    <script type="Type.js"></script>
   </body>
 </html>
