--- a/Home.html
+++ b/Home.html
@@ -40,6 +40,6 @@
     <footer>
       <img class="d" src="discord-512.webp"title="Server Discord" width="48" height="48">
     </footer>
-    <script type="Type.js"></script>
+    <script scr="Type.js"></script>
   </body>
 </html>
