--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <style>
       body {
         background-color: rgb(44, 48, 53);
-        height: auto;
+        height: 500px;
         width: auto;
         margin: auto;
 
@@ -16,6 +16,10 @@
       footer {
         background-color: rgb(49, 55, 63);
         bottom: auto;
+      }
+
+      p.Output {
+        font-size: 40px
       }
 
       img.d {
@@ -33,7 +37,7 @@
   <body>
 
     <div width="auto" height="auto">
-      <p id="Output"></p>
+      <p id="Output" ></p>
       <input type="text" id="Commando" value="Commandi da inserire"><br>
       <button onclick="Type()" type="button" name="Submit" >Submit Command</button>
 
